jx3api 接口修改。 官方api接入